kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mriq-deployment
  labels:
    app: mriq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mriq
  template:
    metadata:
      labels:
        app: mriq
    spec:
      containers:
        - name: nginx
          image: nginx:1-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 512M
            limits:
              cpu: 250m
              memory: 512M
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
        - name: mriq-php
          image: pauulog/mriq:latest
          resources:
            requests:
              cpu: 250m
              memory: 512M
            limits:
              cpu: 250m
              memory: 512M
      volumes:
        - name: nginx-config
          configMap:
            name: mriq-configmap
            items:
              - key: nginx-config
                path: site.conf
