kubernetes/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: mriq-service-external
spec:
  selector:
    app: mriq
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
