kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mriq-service
spec:
  selector:
    app: mriq
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
