kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: mriq-ingress
spec:
  rules:
    - host: mriq.com
      http:
        paths:
          - backend:
              service:
                name: mriq-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mriq.com
      secretName: mriq-cert
